# elysium

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md
CMake/: defines.cmake
elysium_cpp/: CMakeLists.txt  elysium.hpp  owning_mutex.hpp
elysium_ffi/: audio_basics.cpp
elysium_rust/: CMakeLists.txt  Cargo.toml
elysium_rust/src/: lib.rs  processor.rs  voice.rs
src/: elysium.cpp  elysium.hpp  utils.hpp
src/core/: CMakeLists.txt  Cargo.toml  build.rs  lib.rs  wrapper.cpp  wrapper.hpp
src/cpp/: elysium.cpp  elysium.hpp
src/rust/: CMakeLists.txt  Cargo.toml
src/rust/src/: lib.rs  phasor.rs  phasors.rs  processor.rs  voice.rs
src/rust/wrappers/: audio_basics.cpp  audio_basics.hpp  audio_buffer.cpp  audio_buffer.hpp
src/ui/: elysium.cpp  elysium.hpp  owning_mutex.hpp  utils.hpp
