[package]
name = "elysium"
version = "0.1.0"
authors = [ "bepzi <bepzi@bepzi.com>" ]
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

[lib]
crate_type = [ "staticlib", "lib" ]

[dependencies]
cxx = "1"
wmidi = "4"
array-init = "2"

[build-dependencies]
cxx-build = "1"

[profile.release]
debug = true
lto = true
